add todo component and styles

--- a/src/components/Timer.module.css
+++ b/src/components/Timer.module.css
@@ -39,5 +39,31 @@
 .timerBar {
   height: 1rem;
   width: 100%;
+  border: 1px solid var(--primary-color);
+  border-radius: 10px;
+  background-color: transparent;
+  /* background-color: var(--primary-color); */
+}
+
+.timerControls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  margin: 1rem;
+}
+
+.timerControls svg {
+  width: 4rem;
+  /* height: 2rem; */
+  height: auto;
+}
+.timerControls button {
+  font-size: 1.5rem;
+  color: var(--secondary-color);
   background-color: var(--primary-color);
+  border-radius: 20px;
+  border: 1px solid var(--primary-color);
+  padding: 0.5rem 2.5rem;
 }
