--- a/src/components/ToDoList.module.css
+++ b/src/components/ToDoList.module.css
@@ -6,6 +6,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
+  gap: 1rem;
 }
 
 .toDoItems {
@@ -17,9 +18,9 @@
 
   max-height: 200px;
   gap: 1rem;
-  padding: 0 1rem;
-  border: 1px solid var(--primary-color);
-  border-radius: 20px;
+  /* padding: 0 1rem; */
+  /* border: 1px solid var(--primary-color); */
+  /* border-radius: 20px; */
   overflow: scroll;
 }
 
@@ -28,11 +29,13 @@
   display: flex;
   justify-content: space-between;
 
-  padding: 1rem 0;
+  padding: 1rem 0.5rem;
 
   gap: 1rem;
 
-  border-bottom: 1px solid;
+  /* border-bottom: 1px solid; */
+  border: 1px solid;
+  border-radius: 10px;
 }
 
 .toDoEntry svg {
