--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   /* --root-background-image: url("forest-image.jpg"); */
-  --root-background-image: url("../public/assets/forest.jpg");
+  --root-background-image: url("../public/assets/gates.jpg");
 }
 
 :root {
