--- a/src/components/Timer.module.css
+++ b/src/components/Timer.module.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  /* width: 350px; */
 }
 
 .timerOptions {
@@ -23,12 +25,14 @@
 
 .timerMain {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  gap: 2rem;
+  /* gap: 2rem; */
+  width: 100%;
 }
 .timerMain h2 {
   /* font-size: 5rem; */
-  font-size: clamp(6rem, 10vw, 20vw);
+  font-size: clamp(5.5rem, 10vw, 20vw);
 }
 
 .timerMain svg {
