--- a/src/components/ToDoList.module.css
+++ b/src/components/ToDoList.module.css
@@ -25,6 +25,7 @@
 }
 
 .toDoEntry {
+  font-weight: 600;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -36,6 +37,8 @@
   /* border-bottom: 1px solid; */
   border: 1px solid;
   border-radius: 10px;
+
+  backdrop-filter: blur(7px);
 }
 
 .toDoEntry svg {
