--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -132,3 +132,8 @@
   color: var(--secondary-color);
   background-color: var(--primary-color);
 }
+
+.active {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+}
