--- a/src/components/Timer.module.css
+++ b/src/components/Timer.module.css
@@ -88,3 +88,40 @@
   background-color: var(--primary-color);
   color: var(--secondary-color);
 }
+
+.timerMain svg {
+  width: 3rem;
+  box-sizing: border-box;
+  border-radius: 50%;
+  /* border-radius: 50%; */
+  border: 3px solid transparent;
+  padding: 0.5rem;
+  color: var(--primary-color);
+}
+
+.timerMain svg:hover {
+  border: 3px solid var(--primary-color);
+  transition: 0.2s ease-in;
+  cursor: pointer;
+  /* backdrop-filter: blur(10px); */
+}
+
+.timerOptions button:hover,
+.timerControls svg:hover {
+  cursor: pointer;
+}
+
+.timerControls svg:nth-child(2):hover {
+  transition: 0.8s ease-in-out;
+  transform: rotate(-360deg);
+}
+
+@media screen and (min-width: 768px) {
+  .timerMain {
+    justify-content: space-around;
+  }
+
+  .timerMain svg {
+    margin-left: -8rem;
+  }
+}
