--- a/src/components/ToDoList.module.css
+++ b/src/components/ToDoList.module.css
@@ -21,7 +21,37 @@
   /* padding: 0 1rem; */
   /* border: 1px solid var(--primary-color); */
   /* border-radius: 20px; */
-  overflow: scroll;
+  /* overflow: scroll; */
+
+  /* -ms-overflow-style: none; */
+  scrollbar-width: 1px;
+  overflow-y: scroll;
+
+  padding-right: 0.5rem;
+}
+
+.toDoItems::-webkit-scrollbar {
+  /* display: none; */
+}
+
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--primary-color);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 .toDoEntry {
