--- a/src/pageContent/Main.module.css
+++ b/src/pageContent/Main.module.css
@@ -6,3 +6,13 @@
   gap: 2rem;
   margin: 1rem;
 }
+
+@media screen and (min-width: 768px) {
+  .main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    justify-content: center;
+    align-items: start;
+  }
+}
