--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -44,7 +44,7 @@
 }
 
 .menuContent img {
-  margin-top: 1rem;
+  margin-top: 2rem;
   width: 100%;
   border-radius: 10px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -136,4 +136,12 @@
 .active {
   background-color: var(--primary-color);
   color: var(--secondary-color);
+}
+
+.menuOptions h3:hover,
+.menuThemesContainer select:hover,
+.menuButtons button:hover,
+.menuSoundsContainer svg:hover,
+.menuSoundsContainer select:hover {
+  cursor: pointer;
 }
